UX: Fix alignment in group navigation bar (#15169)
Same as #15145.

--- a/app/assets/stylesheets/desktop/group.scss
+++ b/app/assets/stylesheets/desktop/group.scss
@@ -1,33 +1,3 @@
-.group-nav {
-  .group-dropdown {
-    margin-right: 10px;
-  }
-}
-
-.group-navigation {
-  width: 15%;
-  background-color: transparent;
-
-  li {
-    border: none;
-
-    a {
-      color: var(--primary-med-or-secondary-high);
-      padding: 8px 0;
-
-      &.active {
-        background-color: transparent;
-        font-weight: bold;
-        color: var(--primary);
-
-        &:after {
-          display: none;
-        }
-      }
-    }
-  }
-}
-
 .group-activity-outlet,
 .group-messages-outlet,
 .group-manage-outlet {
